src/uri.c

#line 1 "src/uri.rl"
/*
* Copyright 2010-2016, Tarantool AUTHORS, please see AUTHORS file.
*
* Redistribution and use in source and binary forms, with or
* without modification, are permitted provided that the following
* conditions are met:
*
* 1. Redistributions of source code must retain the above
*    copyright notice, this list of conditions and the
*    following disclaimer.
*
* 2. Redistributions in binary form must reproduce the above
*    copyright notice, this list of conditions and the following
*    disclaimer in the documentation and/or other materials
*    provided with the distribution.
*
* THIS SOFTWARE IS PROVIDED BY <COPYRIGHT HOLDER> ``AS IS'' AND
* ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
* TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
* A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
* <COPYRIGHT HOLDER> OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
* INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
* DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
* SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
* BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
* LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
* (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
* THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
* SUCH DAMAGE.
*/
#include "uri.h"
#include <trivia/util.h> /* SNPRINT */
#include <string.h>
#include <stdio.h> /* snprintf */
int
uri_parse(struct uri *uri, const char *p)
{
	const char *pe = p + strlen(p);
	const char *eof = pe;
	int cs;
	memset(uri, 0, sizeof(*uri));
	
	if (p == pe)
	return -1;
	
	const char *s = NULL, *login = NULL, *scheme = NULL;
	size_t login_len = 0, scheme_len = 0;
	
	
	static const int uri_start = 144;
	static const int uri_first_final = 144;
	static const int uri_error = 0;
	
	static const int uri_en_main = 144;
	
	
	{
		cs = (int)uri_start;
	}
	
	{
		if ( p == pe )
		goto _test_eof;
		switch ( cs )
		{
			case 144:
			goto st_case_144;
			case 0:
			goto st_case_0;
			case 145:
			goto st_case_145;
			case 146:
			goto st_case_146;
			case 147:
			goto st_case_147;
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 148:
			goto st_case_148;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 149:
			goto st_case_149;
			case 150:
			goto st_case_150;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 151:
			goto st_case_151;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 152:
			goto st_case_152;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 153:
			goto st_case_153;
			case 154:
			goto st_case_154;
			case 155:
			goto st_case_155;
			case 156:
			goto st_case_156;
			case 157:
			goto st_case_157;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 158:
			goto st_case_158;
			case 159:
			goto st_case_159;
			case 160:
			goto st_case_160;
			case 161:
			goto st_case_161;
			case 162:
			goto st_case_162;
			case 163:
			goto st_case_163;
			case 164:
			goto st_case_164;
			case 165:
			goto st_case_165;
			case 166:
			goto st_case_166;
			case 167:
			goto st_case_167;
			case 168:
			goto st_case_168;
			case 169:
			goto st_case_169;
			case 170:
			goto st_case_170;
			case 171:
			goto st_case_171;
			case 172:
			goto st_case_172;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 46:
			goto st_case_46;
			case 47:
			goto st_case_47;
			case 48:
			goto st_case_48;
			case 49:
			goto st_case_49;
			case 50:
			goto st_case_50;
			case 51:
			goto st_case_51;
			case 52:
			goto st_case_52;
			case 53:
			goto st_case_53;
			case 54:
			goto st_case_54;
			case 55:
			goto st_case_55;
			case 56:
			goto st_case_56;
			case 57:
			goto st_case_57;
			case 58:
			goto st_case_58;
			case 59:
			goto st_case_59;
			case 60:
			goto st_case_60;
			case 61:
			goto st_case_61;
			case 62:
			goto st_case_62;
			case 63:
			goto st_case_63;
			case 64:
			goto st_case_64;
			case 65:
			goto st_case_65;
			case 66:
			goto st_case_66;
			case 67:
			goto st_case_67;
			case 68:
			goto st_case_68;
			case 69:
			goto st_case_69;
			case 70:
			goto st_case_70;
			case 71:
			goto st_case_71;
			case 72:
			goto st_case_72;
			case 73:
			goto st_case_73;
			case 74:
			goto st_case_74;
			case 75:
			goto st_case_75;
			case 76:
			goto st_case_76;
			case 77:
			goto st_case_77;
			case 78:
			goto st_case_78;
			case 79:
			goto st_case_79;
			case 80:
			goto st_case_80;
			case 81:
			goto st_case_81;
			case 82:
			goto st_case_82;
			case 173:
			goto st_case_173;
			case 83:
			goto st_case_83;
			case 84:
			goto st_case_84;
			case 85:
			goto st_case_85;
			case 86:
			goto st_case_86;
			case 87:
			goto st_case_87;
			case 88:
			goto st_case_88;
			case 89:
			goto st_case_89;
			case 90:
			goto st_case_90;
			case 91:
			goto st_case_91;
			case 92:
			goto st_case_92;
			case 93:
			goto st_case_93;
			case 94:
			goto st_case_94;
			case 95:
			goto st_case_95;
			case 96:
			goto st_case_96;
			case 97:
			goto st_case_97;
			case 98:
			goto st_case_98;
			case 99:
			goto st_case_99;
			case 100:
			goto st_case_100;
			case 101:
			goto st_case_101;
			case 102:
			goto st_case_102;
			case 103:
			goto st_case_103;
			case 174:
			goto st_case_174;
			case 175:
			goto st_case_175;
			case 176:
			goto st_case_176;
			case 177:
			goto st_case_177;
			case 178:
			goto st_case_178;
			case 179:
			goto st_case_179;
			case 180:
			goto st_case_180;
			case 104:
			goto st_case_104;
			case 105:
			goto st_case_105;
			case 106:
			goto st_case_106;
			case 107:
			goto st_case_107;
			case 108:
			goto st_case_108;
			case 181:
			goto st_case_181;
			case 109:
			goto st_case_109;
			case 110:
			goto st_case_110;
			case 111:
			goto st_case_111;
			case 112:
			goto st_case_112;
			case 113:
			goto st_case_113;
			case 182:
			goto st_case_182;
			case 183:
			goto st_case_183;
			case 184:
			goto st_case_184;
			case 185:
			goto st_case_185;
			case 186:
			goto st_case_186;
			case 187:
			goto st_case_187;
			case 114:
			goto st_case_114;
			case 115:
			goto st_case_115;
			case 116:
			goto st_case_116;
			case 117:
			goto st_case_117;
			case 118:
			goto st_case_118;
			case 188:
			goto st_case_188;
			case 189:
			goto st_case_189;
			case 190:
			goto st_case_190;
			case 191:
			goto st_case_191;
			case 192:
			goto st_case_192;
			case 193:
			goto st_case_193;
			case 194:
			goto st_case_194;
			case 195:
			goto st_case_195;
			case 196:
			goto st_case_196;
			case 197:
			goto st_case_197;
			case 198:
			goto st_case_198;
			case 199:
			goto st_case_199;
			case 200:
			goto st_case_200;
			case 201:
			goto st_case_201;
			case 202:
			goto st_case_202;
			case 203:
			goto st_case_203;
			case 204:
			goto st_case_204;
			case 205:
			goto st_case_205;
			case 206:
			goto st_case_206;
			case 207:
			goto st_case_207;
			case 208:
			goto st_case_208;
			case 209:
			goto st_case_209;
			case 119:
			goto st_case_119;
			case 120:
			goto st_case_120;
			case 121:
			goto st_case_121;
			case 122:
			goto st_case_122;
			case 123:
			goto st_case_123;
			case 210:
			goto st_case_210;
			case 211:
			goto st_case_211;
			case 124:
			goto st_case_124;
			case 125:
			goto st_case_125;
			case 126:
			goto st_case_126;
			case 127:
			goto st_case_127;
			case 128:
			goto st_case_128;
			case 212:
			goto st_case_212;
			case 213:
			goto st_case_213;
			case 129:
			goto st_case_129;
			case 130:
			goto st_case_130;
			case 131:
			goto st_case_131;
			case 132:
			goto st_case_132;
			case 133:
			goto st_case_133;
			case 214:
			goto st_case_214;
			case 215:
			goto st_case_215;
			case 216:
			goto st_case_216;
			case 217:
			goto st_case_217;
			case 218:
			goto st_case_218;
			case 219:
			goto st_case_219;
			case 220:
			goto st_case_220;
			case 221:
			goto st_case_221;
			case 222:
			goto st_case_222;
			case 223:
			goto st_case_223;
			case 224:
			goto st_case_224;
			case 225:
			goto st_case_225;
			case 226:
			goto st_case_226;
			case 227:
			goto st_case_227;
			case 228:
			goto st_case_228;
			case 229:
			goto st_case_229;
			case 230:
			goto st_case_230;
			case 231:
			goto st_case_231;
			case 232:
			goto st_case_232;
			case 233:
			goto st_case_233;
			case 234:
			goto st_case_234;
			case 235:
			goto st_case_235;
			case 236:
			goto st_case_236;
			case 237:
			goto st_case_237;
			case 238:
			goto st_case_238;
			case 239:
			goto st_case_239;
			case 240:
			goto st_case_240;
			case 241:
			goto st_case_241;
			case 242:
			goto st_case_242;
			case 243:
			goto st_case_243;
			case 244:
			goto st_case_244;
			case 245:
			goto st_case_245;
			case 246:
			goto st_case_246;
			case 247:
			goto st_case_247;
			case 248:
			goto st_case_248;
			case 249:
			goto st_case_249;
			case 250:
			goto st_case_250;
			case 251:
			goto st_case_251;
			case 252:
			goto st_case_252;
			case 253:
			goto st_case_253;
			case 254:
			goto st_case_254;
			case 255:
			goto st_case_255;
			case 256:
			goto st_case_256;
			case 257:
			goto st_case_257;
			case 258:
			goto st_case_258;
			case 259:
			goto st_case_259;
			case 134:
			goto st_case_134;
			case 135:
			goto st_case_135;
			case 136:
			goto st_case_136;
			case 137:
			goto st_case_137;
			case 138:
			goto st_case_138;
			case 260:
			goto st_case_260;
			case 139:
			goto st_case_139;
			case 140:
			goto st_case_140;
			case 141:
			goto st_case_141;
			case 142:
			goto st_case_142;
			case 143:
			goto st_case_143;
			case 261:
			goto st_case_261;
			case 262:
			goto st_case_262;
			case 263:
			goto st_case_263;
			case 264:
			goto st_case_264;
			case 265:
			goto st_case_265;
		}
		goto st_out;
		st_case_144:
		switch( ( (*( p))) ) {
			case 33: {
				goto ctr150;
			}
			case 35: {
				goto ctr151;
			}
			case 37: {
				goto ctr152;
			}
			case 47: {
				goto ctr153;
			}
			case 59: {
				goto ctr150;
			}
			case 61: {
				goto ctr150;
			}
			case 63: {
				goto ctr155;
			}
			case 64: {
				goto st204;
			}
			case 91: {
				goto st38;
			}
			case 95: {
				goto ctr150;
			}
			case 117: {
				goto ctr158;
			}
			case 126: {
				goto ctr150;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 46 ) {
				goto ctr150;
			}
		} else if ( ( (*( p))) > 57 ) {
			if ( ( (*( p))) > 90 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto ctr157;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto ctr157;
			}
		} else {
			goto ctr154;
		}
		{
			goto st0;
		}
		st_case_0:
		st0:
		cs = 0;
		goto _out;
		ctr150:
		{
			#line 139 "src/uri.rl"
			s = p; }
		{
			#line 95 "src/uri.rl"
			s = p; }
		
		goto st145;
		st145:
		p+= 1;
		if ( p == pe )
		goto _test_eof145;
		st_case_145:
		switch( ( (*( p))) ) {
			case 33: {
				goto st145;
			}
			case 35: {
				goto ctr159;
			}
			case 37: {
				goto st6;
			}
			case 47: {
				goto ctr161;
			}
			case 58: {
				goto ctr162;
			}
			case 61: {
				goto st145;
			}
			case 63: {
				goto ctr163;
			}
			case 64: {
				goto ctr164;
			}
			case 95: {
				goto st145;
			}
			case 126: {
				goto st145;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 59 ) {
				goto st145;
			}
		} else if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto st145;
			}
		} else {
			goto st145;
		}
		{
			goto st0;
		}
		ctr151:
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr159:
		{
			#line 96 "src/uri.rl"
			uri->host = s; uri->host_len = p - s;}
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr170:
		{
			#line 71 "src/uri.rl"
			s = p; }
		{
			#line 72 "src/uri.rl"
			uri->query = s; uri->query_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr172:
		{
			#line 72 "src/uri.rl"
			uri->query = s; uri->query_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr175:
		{
			#line 133 "src/uri.rl"
			s = p; }
		{
			#line 134 "src/uri.rl"
			uri->service = s; uri->service_len = p - s; }
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr186:
		{
			#line 134 "src/uri.rl"
			uri->service = s; uri->service_len = p - s; }
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr201:
		{
			#line 103 "src/uri.rl"
			uri->host = s; uri->host_len = p - s;
			uri->host_hint = 1; }
		{
			#line 96 "src/uri.rl"
			uri->host = s; uri->host_len = p - s;}
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr210:
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr316:
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 130 "src/uri.rl"
			s = p;}
		{
			#line 114 "src/uri.rl"
			
			/*
			* This action is also called for path_* terms.
			* I absolutely have no idea why.
			*/
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr320:
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 114 "src/uri.rl"
			
			/*
			* This action is also called for path_* terms.
			* I absolutely have no idea why.
			*/
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		ctr325:
		{
			#line 163 "src/uri.rl"
			s = p; }
		{
			#line 167 "src/uri.rl"
			uri->path = s; uri->path_len = p - s; }
		{
			#line 114 "src/uri.rl"
			
			/*
			* This action is also called for path_* terms.
			* I absolutely have no idea why.
			*/
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
		{
			#line 187 "src/uri.rl"
			s = p; }
		
		goto st146;
		st146:
		p+= 1;
		if ( p == pe )
		goto _test_eof146;
		st_case_146:
		switch( ( (*( p))) ) {
			case 33: {
				goto ctr165;
			}
			case 37: {
				goto ctr166;
			}
			case 61: {
				goto ctr165;
			}
			case 95: {
				goto ctr165;
			}
			case 124: {
				goto ctr165;
			}
			case 126: {
				goto ctr165;
			}
		}
		if ( ( (*( p))) < 63 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 59 ) {
				goto ctr165;
			}
		} else if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto ctr165;
			}
		} else {
			goto ctr165;
		}
		{
			goto st0;
		}
		ctr165:
		{
			#line 75 "src/uri.rl"
			s = p; }
		
		goto st147;
		st147:
		p+= 1;
		if ( p == pe )
		goto _test_eof147;
		st_case_147:
		switch( ( (*( p))) ) {
			case 33: {
				goto st147;
			}
			case 37: {
				goto st1;
			}
			case 61: {
				goto st147;
			}
			case 95: {
				goto st147;
			}
			case 124: {
				goto st147;
			}
			case 126: {
				goto st147;
			}
		}
		if ( ( (*( p))) < 63 ) {
			if ( 36 <= ( (*( p))) && ( (*( p))) <= 59 ) {
				goto st147;
			}
		} else if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto st147;
			}
		} else {
			goto st147;
		}
		{
			goto st0;
		}
		ctr166:
		{
			#line 75 "src/uri.rl"
			s = p; }
		
		goto st1;
		st1:
		p+= 1;
		if ( p == pe )
		goto _test_eof1;
		st_case_1:
		switch( ( (*( p))) ) {
			case 37: {
				goto st147;
			}
			case 117: {
				goto st2;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st147;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st147;
			}
		} else {
			goto st147;
		}
		{
			goto st0;
		}
		st2:
		p+= 1;
		if ( p == pe )
		goto _test_eof2;
		st_case_2:
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st3;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st3;
			}
		} else {
			goto st3;
		}
		{
			goto st0;
		}
		st3:
		p+= 1;
		if ( p == pe )
		goto _test_eof3;
		st_case_3:
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st4;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st4;
			}
		} else {
			goto st4;
		}
		{
			goto st0;
		}
		st4:
		p+= 1;
		if ( p == pe )
		goto _test_eof4;
		st_case_4:
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st5;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st5;
			}
		} else {
			goto st5;
		}
		{
			goto st0;
		}
		st5:
		p+= 1;
		if ( p == pe )
		goto _test_eof5;
		st_case_5:
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st147;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
				goto st147;
			}
		} else {
			goto st147;
		}
		{
			goto st0;
		}
		ctr152:
		{
			#line 139 "src/uri.rl"
			s = p; }
		{
			#line 95 "src/uri.rl"
			s = p; }
		
		goto st6;
		st6:
		p+= 1;
		if ( p == pe )
		goto _test_eof6;
		st_case_6:
		switch( ( (*( p))) ) {
			case 37: {
				goto st145;
			}
			case 117: {
				goto st7;
			}
		}
		if ( ( (*( p))) < 65 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto st145;
			}
		} else if ( ( (*( p))) > 70 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 102 ) {
